# calc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package-lock.json  package.json
Calculator/: AppDelegate.swift  Bridge-Bridging-Header.h  Info.plist
Calculator.xcodeproj/: project.pbxproj
Calculator/Assets.xcassets/AppIcon.appiconset/: Contents.json
Calculator/Base.lproj/: Main.storyboard
Calculator/Data/: CalculatorData.swift
Calculator/Extension/: ExArray.swift  ExColor.swift
Calculator/GUI/: CalcButton.swift  ContentView.swift  GridButton.swift  ResultView.swift
Calculator/Services/: Calculation.h  Calculation.hpp  Calculation.mm
Calculator/Struct/: Field.hpp  type.h
Calculator/Utils/: hash.hpp  math.hpp  type_change.hpp
src/: main.cpp
src/utils/: format.h  hash.h  maths.h  type_change.h
